--- a/coverage_html_report/index.html
+++ b/coverage_html_report/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">99%</span>
+            <span class="pc_cov">84%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -54,7 +54,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-14 05:52 +0000
+            created at 2024-09-15 06:07 +0000
         </p>
     </div>
 </header>
@@ -79,10 +79,10 @@
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td>62</td>
+                <td>63</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="62 62">100%</td>
+                <td class="right" data-ratio="63 63">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html">src/elt_practice_2024/custom_logger.py</a></td>
@@ -105,14 +105,21 @@
                 <td>0</td>
                 <td class="right" data-ratio="73 74">99%</td>
             </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_py.html">src/elt_practice_2024/data_ingestion.py</a></td>
+                <td>31</td>
+                <td>31</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 31">0%</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>172</td>
-                <td>2</td>
+                <td>204</td>
+                <td>33</td>
                 <td>0</td>
-                <td class="right" data-ratio="170 172">99%</td>
+                <td class="right" data-ratio="171 204">84%</td>
             </tr>
         </tfoot>
     </table>
@@ -124,11 +131,11 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-14 05:52 +0000
+            created at 2024-09-15 06:07 +0000
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="z_27bcb07cf676e1a3_data_extraction_utils_py.html"></a>
+        <a id="prevFileLink" class="nav" href="z_27bcb07cf676e1a3_data_ingestion_py.html"></a>
         <a id="nextFileLink" class="nav" href="z_27bcb07cf676e1a3___init___py.html"></a>
         <button type="button" class="button_prev_file" data-shortcut="["></button>
         <button type="button" class="button_next_file" data-shortcut="]"></button>
