--- a/coverage_html_report/function_index.html
+++ b/coverage_html_report/function_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">84%</span>
+            <span class="pc_cov">87%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-15 06:07 +0000
+            created at 2024-09-15 22:43 +0000
         </p>
     </div>
 </header>
@@ -225,30 +225,54 @@
                 <td class="right" data-ratio="15 15">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_py.html#t17">src/elt_practice_2024/data_ingestion.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_py.html#t17"><data value='main'>main</data></a></td>
-                <td>22</td>
-                <td>22</td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_py.html#t18">src/elt_practice_2024/data_ingestion.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_py.html#t18"><data value='main'>main</data></a></td>
+                <td>19</td>
+                <td>19</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 22">0%</td>
+                <td class="right" data-ratio="0 19">0%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_py.html">src/elt_practice_2024/data_ingestion.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>9</td>
-                <td>9</td>
+                <td>10</td>
+                <td>10</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 9">0%</td>
+                <td class="right" data-ratio="0 10">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_utils_py.html#t19">src/elt_practice_2024/data_ingestion_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_utils_py.html#t19"><data value='create_schema'>create_schema</data></a></td>
+                <td>11</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="11 11">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_utils_py.html#t49">src/elt_practice_2024/data_ingestion_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_utils_py.html#t49"><data value='drop_schema'>drop_schema</data></a></td>
+                <td>13</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="13 13">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_utils_py.html">src/elt_practice_2024/data_ingestion_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_ingestion_utils_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
+                <td>8</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="8 8">100%</td>
             </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>204</td>
-                <td>33</td>
+                <td>234</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="171 204">84%</td>
+                <td class="right" data-ratio="203 234">87%</td>
             </tr>
         </tfoot>
     </table>
@@ -260,7 +284,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-15 06:07 +0000
+            created at 2024-09-15 22:43 +0000
         </p>
     </div>
     <aside class="hidden">
